Fix: overflow y hidden
for category drop menu section

--- a/css/card.css
+++ b/css/card.css
@@ -8,6 +8,9 @@
   --name-color: #232323;
   --card-bg-text: #343434;
 }
+.OverFlowYHidden{
+  overflow-y: hidden;
+}
 .container {
   user-select: none;
   position: relative;
